# comp-371-q2

./: .gitignore  CMakeLists.txt  README.md
assets/models/: Attach1.mtl  Floor.mtl  Pillar1.mtl  Screen_back.mtl  Stage.mtl  spotlight.mtl
src/: AssetLoader.cpp  Camera.cpp  DirectionalLight.cpp  Entity.cpp  EntityGroup.cpp  EntityManager.cpp  EntityRenderer.cpp  Grid.cpp  Light.cpp  Line.cpp  Main.cpp  Material.cpp  Mesh.cpp  MeshLoader.cpp  OmniShadowMap.cpp  PointLight.cpp  SceneRenderer.cpp  Shader.cpp  ShadowMap.cpp  Spotlight.cpp  SpotlightManager.cpp  Texture.cpp  TexturedMesh.cpp  Window.cpp
src/Headers/: AssetLoader.h  Camera.h  Cube.h  DirectionalLight.h  Entity.h  EntityGroup.h  EntityManager.h  EntityRenderer.h  Grid.h  Light.h  Line.h  Material.h  Mesh.h  MeshLoader.h  OmniShadowMap.h  PointLight.h  SceneRenderer.h  Shader.h  ShadowMap.h  Spotlight.h  SpotlightManager.h  Texture.h  TexturedMesh.h  Window.h
src/Shaders/: omni_shadow_map.frag  omni_shadow_map.geom  shader.frag  shader.vert  shadow.frag  shadow.vert  skybox.frag  skybox.vert
src/comp371-project/: .gitignore  comp371-project.sln
src/comp371-project/comp371-project/: Main.cpp  Mesh.cpp  Shader.cpp  Shader.h  comp371-project.vcxproj  comp371-project.vcxproj.filters
src/comp371-project/comp371-project/Shaders/: shader.frag
